# vmod-impress

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  docker-compose.yaml  vmod.vcc
config/: default.vcl  impress.ron  shrink-config.ron  shrink.ron  varnish.vcl
docker/: Dockerfile  build.sh
src/: backend.rs  config.rs  error.rs  images.rs  lib.rs  macros.rs  main.rs  utils.rs
src/cache/: file_saver.rs  mod.rs  pre_optimizer.rs  watcher.rs
src/images/: avif.rs  jpeg.rs  mod.rs  webp.rs
