[package]
name = "vmod_shrink"
version = "0.1.0"
edition = "2021"

[build-dependencies]
varnish = "0.0.19"

[dependencies]
varnish = "0.0.19"
image = "0.25"
webp = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"

[lib]
name = "vmod_shrink"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "vmod_shrink_tests"
path = "src/main.rs"
