[package]
name = "vmod_impress"
version = "0.1.0"
edition = "2021"

[build-dependencies]
varnish = "0.0.19"

[dependencies]
varnish = "0.0.19"
image = "0.25"
webp = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
log = "0.4"
log4rs = { version = "1.3", features = ["file_appender"] }
notify = "6.1"
itertools = "0.12"

[lib]
name = "vmod_impress"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "vmod_impress_tests"
path = "src/main.rs"
