[package]
name = "vmod_impress"
version = "0.1.0"
edition = "2021"

[build-dependencies]
varnish = "0.0.19"

[dependencies]
varnish = "0.0.19"
image = "0.24"
webp = "0.2"
libavif = "0.13"
turbojpeg = { version = "1.1", features = ["image"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
log = "0.4"
log4rs = { version = "1.3", features = ["file_appender"] }
notify = "6.1"
itertools = "0.12"
rusty_pool = { version = "0.7", default-features = false }
urlencoding = "2.1"

[lib]
name = "vmod_impress"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "vmod_impress_tests"
path = "src/main.rs"
